// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When an existing application is marked certified writes the delta between REGISTERED and CERTIFIED states to influxdb 1`] = `
Object {
  "fields": Object {
    "application_id": "1744fc19-95be-434b-8bc9-a76d6b81551b",
    "current_task_id": "dcf1644e-362d-414f-b0cc-2b240eea8591",
    "duration_in_seconds": 94381,
    "previous_task_id": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "current_status": "CERTIFIED",
    "previous_status": "REGISTERED",
  },
}
`;

exports[`When an existing application is marked registered writes the delta between DECLARED and REGISTERED states to influxdb 1`] = `
Object {
  "fields": Object {
    "application_id": "80433e78-7042-4837-b888-a79c0181bf4e",
    "current_task_id": "18ea2464-f843-45e2-93b1-8b026e0d93a4",
    "duration_in_seconds": 170630,
    "previous_task_id": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "current_status": "REGISTERED",
    "previous_status": "DECLARED",
  },
}
`;

exports[`When an existing application is marked registered writes the delta between VALIDATED and REGISTERED states to influxdb 1`] = `
Object {
  "fields": Object {
    "application_id": "80433e78-7042-4837-b888-a79c0181bf4e",
    "current_task_id": "18ea2464-f843-45e2-93b1-8b026e0d93a4",
    "duration_in_seconds": 170630,
    "previous_task_id": "e172627c-8490-44da-a702-80a082f978f5",
  },
  "measurement": "application_event_duration",
  "tags": Object {
    "current_status": "REGISTERED",
    "previous_status": "VALIDATED",
  },
}
`;

exports[`When an in-progress application is recieved writes the in complete field points to influxdb 1`] = `
Object {
  "fields": Object {
    "missing_field_group_id": "child-view-group",
    "missing_field_id": "placeOfBirth",
    "missing_field_section_id": "child",
  },
  "measurement": "in_complete_fields",
  "tags": Object {
    "compositionId": "b2fbb82c-a68d-4793-98e1-87484fc785c4",
    "locationLevel5": "Location/308c35b4-04f8-4664-83f5-9790e790cde1",
    "reg_status": "IN_PROGESS",
  },
}
`;
